# chrome_dino_game

./: BUILD_WINDOWS.md  Cargo.toml  README.md  WINDOWS_PERFORMANCE.md  build_optimized.bat  build_optimized.sh
.cargo/: config.toml
.github/workflows/: build.yml  release-v2.yml  release.yml
assets/sprites/: README.md
src/: main.rs
