[package]
name = "dino_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.0", features = ["default"] }
rand = "0.9.1"

# 优化编译选项
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Windows 发布版本优化
[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
strip = true

# Windows 特定优化
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

# Windows 平台特定配置
[target.'cfg(windows)'.profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
debug = false

# 启用更多优化
[profile.release.package."*"]
opt-level = 3
